--- a/DOM/03_JavaScript_nodeSelector/script02(노드선택2).html
+++ b/DOM/03_JavaScript_nodeSelector/script02(노드선택2).html
@@ -10,12 +10,16 @@
     <script>
 
         window.onload = function(){
+            var btn0 = document.querySelectorAll("ul li");
+            console.log(btn0);
+
             var btn1 = document.querySelector("#btn1");             /* css의 선택자와 같은 형태로 접근이 가능하다. */
             console.log(btn1);
             btn1.onclick = function(){
-                var box1 = document.querySelectorAll(".box1>li")    /* 자식에 접근할 때에도 마찬가지 방식으로 접근 */
-                for(var i = 0 ; i < box1.length ; i++){
-                    console.log(box1[i].textContent);
+                var list1 = document.querySelectorAll(".box1>li")    /* 자식에 접근할 때에도 마찬가지 방식으로 접근 */
+                for(var i = 0 ; i < list1.length ; i++){
+                    console.log(list1[i].textContent);
+                    list1[i].style.color = "red";                    /* 스타일 속성에 접근하여 스타일을 바꾸는 것도 가능*/
                 }
             }
         }
